# app/controllers/taskcontroller.go
@@ -4,18 +4,19 @@ import "github.com/gin-gonic/gin"
 
 type TaskController struct{}
 
-//	Add godoc
+//	CreateOrUpdate godoc
 //
-//	@Summary			add task
-//	@Description	add cron task
+//	@Summary			create or update task
+//	@Description	create or update cron task
 //	@Tags					task
 //	@Accept				json
 //	@Produce			json
 //	@Param				taskName path string true "cron task name"
+//	@Param				body body types.TaskReq true "create or update cron task request"
 //	@Success			200 {string} OK
 //	@Failure			400 {string} BadRequest
 //	@Router				/task/{taskName} [post]
-func (tc *TaskController) Add(ctx *gin.Context) {}
+func (tc *TaskController) CreateOrUpdate(ctx *gin.Context) {}
 
 // Remove godoc
 //
